--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue",
+  "name": "inspira-ui",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -8,17 +8,35 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vueuse/core": "^12.7.0",
+    "motion-v": "^0.10.0",
     "swiper": "^11.2.10",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@inspira-ui/plugins": "^0.0.1",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "3",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "~5.7.3",
     "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0"
+    "vite-plugin-vue-devtools": "^8.0.0",
+    "vue-tsc": "^2.2.2"
   }
 }
