--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^12.7.0",
-    "motion-v": "^0.10.0",
+    "@vueuse/motion": "^3.0.3",
+    "motion-v": "^0.10.1",
     "swiper": "^11.2.10",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
