--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/core": "^12.7.0",
     "@vueuse/motion": "^3.0.3",
     "motion-v": "^0.10.1",
+    "ogl": "^1.0.11",
     "swiper": "^11.2.10",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
