--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^12.7.0",
+    "@vueuse/head": "^2.0.0",
     "@vueuse/motion": "^3.0.3",
     "motion-v": "^0.10.1",
     "ogl": "^1.0.11",
