--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@splinetool/runtime": "^1.10.57",
     "@vueuse/core": "^12.7.0",
     "@vueuse/head": "^2.0.0",
     "@vueuse/motion": "^3.0.3",
