--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^12.7.0",
     "@vueuse/head": "^2.0.0",
     "@vueuse/motion": "^3.0.3",
+    "canvas-confetti": "^1.9.3",
     "motion-v": "^0.10.1",
     "ogl": "^1.0.11",
     "swiper": "^11.2.10",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@inspira-ui/plugins": "^0.0.1",
     "@tsconfig/node22": "^22.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
